<resources>
    <string name="app_name">SlamDunk</string>

    <!--Splash-->
    <string name="splash_title">SlamDunk</string>
    <string name="splash_logo_content_description">splash logo</string>

    <!--Login-->
    <string name="login_title">SlamDunk</string>
    <string name="login_app_description">Get access to all the NBA stats. Teams, players, games and more!</string>
    <string name="login_text">Login to access your account and personal preferences.</string>
    <string name="login_btn_text">Sign in with Google</string>
    <string name="login_logo_content_description">login logo</string>

    <!--Main-->
    <string name="main_title_teams">Teams</string>
    <string name="logout_button_content_description">logout</string>

    <!--List Item-->
    <string name="bookmark_button_content_description">bookmark</string>
    <string name="list_item_team_name">Team Name</string>
    <string name="list_item_team_logo_content_description">team logo</string>

    <!--List Item Bookmark-->
    <string name="remove_button_content_description">remove</string>

    <!--Bookmarks-->
    <string name="bookmarks_title">Bookmarks</string>

    <!--Search-->
    <string name="search_title">Search</string>

    <!--Detail-->
    <string name="detail_title">Detail</string>
    <string name="back_button_content_description">back</string>
    <string name="team_stats">Team Stats</string>
    <string name="players">Players</string>
    <string name="list_item_player_name">Player Name</string>

    <string name="player_full_name">%1$s %2$s</string>


</resources>