<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/teamCard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        app:cardBackgroundColor="@color/md_theme_primaryContainer"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/teamLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/list_item_team_logo_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <Button
                android:id="@+id/btnTeamName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#00000000"
                android:fontFamily="@font/montserrat_bold"
                android:letterSpacing="0.08"
                android:text="@string/list_item_team_name"
                android:textAlignment="center"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnBookmark"
                app:layout_constraintStart_toEndOf="@+id/teamLogo"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnBookmark"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/bookmark_button_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bookmark_logo"
                app:tint="@color/md_theme_onPrimaryContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>