<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-71dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="#00000000"
                android:contentDescription="@string/back_button_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_icon"
                app:tint="@color/md_theme_onSurface" />

            <TextView
                android:id="@+id/titleDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:includeFontPadding="false"
                android:letterSpacing="0.08"
                android:text="@string/detail_title"
                android:textAlignment="center"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout">

            <ProgressBar
                android:id="@+id/progressBarDetail"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:indeterminateDrawable="@drawable/custom_progress_icon"
                android:maxWidth="48dp"
                android:maxHeight="48dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingHorizontal="175dp"
                android:progressTint="@color/md_theme_primaryContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/playerCard"
                android:layout_width="300dp"
                android:layout_height="500dp"
                android:layout_marginTop="-20dp"
                app:cardBackgroundColor="@color/md_theme_inversePrimary"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teamCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/detailPlayers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:letterSpacing="0.08"
                        android:text="@string/players"
                        android:textAlignment="center"
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvPlayers"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="25dp"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailPlayers"
                        tools:itemCount="5"
                        tools:listitem="@layout/list_item_player" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/teamCard"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="5dp"
                android:translationZ="2dp"
                app:cardBackgroundColor="@color/md_theme_primaryContainer"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/detailLogo"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/list_item_team_logo_content_description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/detailTeamName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:letterSpacing="0.08"
                        android:paddingVertical="5dp"
                        android:text="@string/list_item_team_name"
                        android:textAlignment="center"
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailLogo" />

                    <TextView
                        android:id="@+id/detailTeamStats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:letterSpacing="0.08"
                        android:paddingVertical="5dp"
                        android:text="@string/team_stats"
                        android:textAlignment="center"
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailTeamName" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>